# mono_chat_rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/admin/: mod.rs  stats.rs
crates/api/src/routes/bots/: create.rs  delete.rs  edit.rs  fetch.rs  fetch_owned.rs  fetch_public.rs  invite.rs  mod.rs
crates/api/src/routes/channels/: channel_ack.rs  channel_delete.rs  channel_edit.rs  channel_fetch.rs  group_add_member.rs  group_create.rs  group_remove_member.rs  invite_create.rs  members_fetch.rs  message_bulk_delete.rs  message_clear_reactions.rs  message_delete.rs  message_edit.rs  message_fetch.rs  message_query.rs  message_react.rs  message_search.rs  message_send.rs  message_unreact.rs  mod.rs  permissions_set.rs  permissions_set_default.rs  voice_join.rs  webhook_create.rs  webhook_fetch_all.rs
crates/api/src/routes/customisation/: emoji_create.rs  emoji_delete.rs  emoji_fetch.rs
crates/api/src/routes/invites/: invite_delete.rs  invite_fetch.rs  invite_join.rs  mod.rs
crates/api/src/routes/onboard/: complete.rs  hello.rs
crates/api/src/routes/push/: subscribe.rs  unsubscribe.rs
crates/api/src/routes/root/: mod.rs
crates/api/src/routes/safety/: mod.rs  report_content.rs
crates/api/src/routes/servers/: ban_create.rs  ban_list.rs  ban_remove.rs  channel_create.rs  emoji_list.rs  invites_fetch.rs  member_edit.rs  member_experimental_query.rs  member_fetch.rs  member_fetch_all.rs  member_remove.rs  permissions_set.rs  permissions_set_default.rs  roles_create.rs  roles_delete.rs  roles_edit.rs  server_ack.rs  server_create.rs  server_delete.rs  server_edit.rs  server_fetch.rs
crates/api/src/routes/sync/: get_settings.rs  get_unreads.rs  mod.rs  set_settings.rs
crates/api/src/routes/users/: add_friend.rs  block_user.rs  mod.rs  (+13 more)
crates/api/src/util/: ratelimiter.rs
crates/socket/: Cargo.toml
crates/socket/src/: config.rs  database.rs  main.rs  websocket.rs
(+131 files in other folders)
