[package]
name = "chat-socket"
version = "0.1.0"
edition = "2021"

[dependencies]

# util
log = "*"
once_cell = "1.9.0"

# parsing
querystring = "1.1.0"

# quark
chat-core = { path = "../core" }

# serde
serde_json = "1.0.79"
rmp-serde = "1.0.0"
serde = "1.0.136"

# async
futures = "0.3.21"
async-tungstenite = { version = "0.17.0", features = ["async-std-runtime"] }
async-std = { version = "1.8.0", features = [
    "tokio1",
    "tokio02",
    "attributes",
] }

# core
sentry = "0.31.5"
